--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My portfolio</title>
 </head>
 <body>
     <p>
-    Hi! I am Tushar.
+    
+        <h1>
+        Hi! I am Tushar.
+        </h1> 
+        <h3>
+        I am a software developer at TCS currently working on java.
+        I am learning web development to soon become a good react.js developer.    
+        </h3>   
     </p>
 </body>
 </html>
