--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         </h1> 
         <h3>
         I am a software developer at TCS currently working on java.
-        I am learning web development to soon become a good react.js developer.    
-        </h3>   
+        I am learning web development to soon become a good react.js developer.   
+        <h3>
+        <br>    
+        <h2><p> Hobbies  </p> </h2>     
+           <h3><p> My hobbies are playing chess, football, and following club football leagues </p></h3>
     </p>
 </body>
 </html>
