--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My portfolio</title>
-    <link href='styles.css' rel='stylesheet'/>
+    <title>My portfolio | Home</title>
+    <link href='/styles.css' rel='stylesheet'/>
 </head>
 <body>
-    <p>
-    
-        <h1>
-        Hi! I am Tushar.
-        </h1> 
-        <h3>
-        I am a software developer at TCS currently working on java.
-        I am learning web development to soon become a good react.js developer.   
-        <h3>
-        <br>    
-        <h2><p> Hobbies  </p> </h2>     
-           <h3><p> My hobbies are playing chess, football, and following club football leagues </p></h3>
-    </p>
+    <nav class="navigation">
+        <div class="nav-brand">Welcome to my blog</div>
+        <ul class="list-nobullets">
+            <li class="list-item-inline">
+                <a class="link" href="/">Home </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">Blog</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
