--- a/index.html
+++ b/index.html
@@ -22,5 +22,41 @@
             </li>
         </ul>
     </nav>
+
+    <header class="hero">
+        <img class="hero-image" src="images/HeaderImage.svg" />
+        <h1 class="hero-heading">Tushar Bhandirge<span class="hero-span"> the web developer</span></h1>
+    </header>
+
+    <Section class="section section-ow">
+        <div class="container container-center">
+            <h1>Technologies</h1>
+            <p>I am familar with Html, css, core java, c, c++.
+                I have experience in creating REST and SOAP APIs using java.
+            </p>
+        </div>
+
+    </Section>
+
+    <Section class="section">
+        <div class="container container-center">
+            <h1>Projects</h1>
+            <p>
+                I like to showcase my work thus you can see my projects hosted online
+
+            </p>
+            <a href="/" class="link link-primary">Goto Projets</a>
+        </div>
+    </Section>
+
+    <Section class="section section-ow">
+        <div class="container container-center">
+            <h1>Blogs</h1>
+            <p>I also like to showcase my journey of web developent and some events of my life by writing blow </p>
+        </div>
+
+    </Section>
+
+
 </body>
 </html>
