Feat : added links to blog and project page

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <a class="link" href="/">Home </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Projects</a>
+                <a class="link" href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Blog</a>
+                <a class="link" href="/blog.html">Blog</a>
             </li>
         </ul>
     </nav>
@@ -45,7 +45,7 @@
                 I like to showcase my work thus you can see my projects hosted online
 
             </p>
-            <a href="/" class="link link-primary">Goto Projets</a>
+            <a href="/projects.html" class="link link-primary">Goto Projets</a>
         </div>
     </Section>
 
