--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My portfolio | Projects</title>
+    <link href='/styles.css' rel='stylesheet'/>
 </head>
 <body>
 
+    <nav class="navigation">
+        <div class="nav-brand">Welcome to my blog</div>
+        <ul class="list-nobullets">
+            <li class="list-item-inline">
+                <a class="link" href="/">Home </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/projects.html">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/blog.html">Blog</a>
+            </li>
+        </ul>
+    </nav>
     This is project page
     
 </body>
