feat: added projects in the project page

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,36 @@
             </li>
         </ul>
     </nav>
-    This is project page
+    <header class="hero">
+        <img class="hero-image" src="images/HeaderImage.svg" />
+        <h1 class="hero-heading">Welcome<span class="hero-span"> to my projects page</span></h1>
+    </header>
+
+    <Section class="section section-ow">
+        <div class="container container-center">
+            <h1>Emoji Meaning</h1>
+            <p>Do you also sometimes find it hard to interprete meaning of an emoji?
+                Well I made a simple web-app which helps to find out meaning of an emoji, you just need to type in the emoji, or select
+                the desired emoji from the pallet and its meaning shall appear!!
+            </p>
+            <a href="https://emoji-meanings.netlify.app" class="link link-primary">Check out the web-app</a>
+            <a href="https://github.com/TusharBhandirge/EmojiTranslate" class="link link-secondary">Check out the source code</a>
+
+        </div>
+
+    </Section>
+
+    <Section class="section">
+        <div class="container container-center">
+            <h1>Expense list</h1>
+            <p>Do you also sometimes find it hard to keep track of all your expenses?
+                Well I made a simple web-app which helps to record all the expense so that you will be able to keep track of what you are speding your money.
+            </p>
+            <a href="https://expense-list.netlify.app" class="link link-primary">Check out the web-app</a>
+            <a href="https://github.com/TusharBhandirge/expense_record" class="link link-secondary">Check out the source code</a>
+
+    </Section>
+
     
 </body>
 </html>
