--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 <body>
 
     <nav class="navigation">
-        <div class="nav-brand">Welcome to my blog</div>
+        <div class="nav-brand">Welcome to my portfolio</div>
         <ul class="list-nobullets">
             <li class="list-item-inline">
                 <a class="link" href="/">Home </a>
