--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,33 @@
             </li>
         </ul>
     </nav>
-    this is blog page
+    <header class="hero">
+        <img class="hero-image" src="images/HeaderImage.svg" />
+        <h1 class="hero-heading">Welcome<span class="hero-span">To my blog page</span></h1>
+    </header>
+
+    <Section class="section section-ow">
+        <div class="container container-center">
+            <h1>My 1st blog</h1>
+            <p>
+                This blog speaks about how I got to know about Neog.camp.
+                click below to check out the whole blog
+            </p>
+            <a href="/projects.html" class="link link-primary">checkout blog</a>
+        </div>
+
+    </Section>
+
+    <Section class="section">
+        <div class="container container-center">
+            <h1>Building my portfolio</h1>
+            <p>
+               This blog showcase my journey of building my portfolio and completing mark 15 of <neog class="camp"></neog>
+               click below to check out the whole blog
+            </p>
+            <a href="/projects.html" class="link link-primary">Goto Projets</a>
+        </div>
+    </Section>
+
 </body>
 </html>
