Added blog pages

--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
                 This blog speaks about how I got to know about Neog.camp.
                 click below to check out the whole blog
             </p>
-            <a href="/projects.html" class="link link-primary">checkout blog</a>
+            <a href="BlogPages/myFirstBlog.html" class="link link-primary">checkout blog</a>
         </div>
 
     </Section>
