Fix : fined path for blogs

--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
                 This blog speaks about how I got to know about Neog.camp.
                 click below to check out the whole blog
             </p>
-            <a href="BlogPages/myFirstBlog.html" class="link link-primary">checkout blog</a>
+            <a href="/BlogPages/myFirstBlog.html" class="link link-primary">checkout blog</a>
         </div>
 
     </Section>
@@ -46,7 +46,7 @@
                This blog showcase my journey of building my portfolio and completing mark 15 of <neog class="camp"></neog>
                click below to check out the whole blog
             </p>
-            <a href="/projects.html" class="link link-primary">Goto Projets</a>
+            <a href="/BlogPages/BuildingMyPortfolio.html" class="link link-primary">Goto Projets</a>
         </div>
     </Section>
 
