fix : fixed background color and hero path

--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
                This blog showcase my journey of building my portfolio and completing mark 15 of <neog class="camp"></neog>
                click below to check out the whole blog
             </p>
-            <a href="/components/BlogPages/BuildingMyPortfolio.html" class="link link-primary">Goto Projets</a>
+            <a href="/components/BlogPages/BuildingMyPortfolio.html" class="link link-primary">checkout blog</a>
         </div>
     </Section>
 
