feat : added Projects

--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,65 @@
         <h1 class="hero-heading">Welcome<span class="hero-span"> to my projects page</span></h1>
     </header>
 
+
+    <Section class="section">
+        <div class="container container-center">
+            <h1>Stock Return</h1>
+            <p>
+               Check how much profit or loss you are making on a stock.
+            </p>
+            <a href="https://check-stock-return.netlify.app" class="link link-primary">Check out the web-app</a>
+            <a href="https://github.com/TusharBhandirge/Stock-return-calculator.git" class="link link-secondary">Check out the source code</a>
+
+    </Section>
+
+
+    <Section class="section section-ow">
+        <div class="container container-center">
+            <h1>Palindrome BirthDates</h1>
+            <p>Check if your birthdates are palindorme or not.
+            </p>
+            <a href="https://check-birthdate-palindrome.netlify.app/" class="link link-primary">Check out the web-app</a>
+            <a href="https://github.com/TusharBhandirge/Birthday-Palindrome.git" class="link link-secondary">Check out the source code</a>
+
+        </div>
+
+    </Section>
+
+    <Section class="section">
+        <div class="container container-center">
+            <h1>Fun with Triangles</h1>
+            <p>
+               How well do you know your triangles.
+            </p>
+            <a href="https://fun-quiz-on-triangles.netlify.app/" class="link link-primary">Check out the web-app</a>
+            <a href="https://github.com/TusharBhandirge/Fun-with-triangles.git" class="link link-secondary">Check out the source code</a>
+
+    </Section>
+
+    <Section class="section section-ow">
+        <div class="container container-center">
+            <h1>Lucky BirthDates</h1>
+            <p>Find out if your birth date is lucky or not!
+            </p>
+            <a href="https://is-my-birthdate-lucky.netlify.app/" class="link link-primary">Check out the web-app</a>
+            <a href="https://github.com/TusharBhandirge/Lucky-Birthday.git" class="link link-secondary">Check out the source code</a>
+
+        </div>
+
+    </Section>
+
+    <Section class="section">
+        <div class="container container-center">
+            <h1>Cash Register</h1>
+            <p>
+                A simple vanilaJS app which help the user by telling how can he/she return the change to the customer with minimum number of notes?
+            </p>
+            <a href="https://my-cash-register.netlify.app/" class="link link-primary">Check out the web-app</a>
+            <a href="https://github.com/TusharBhandirge/Cash-Register.git" class="link link-secondary">Check out the source code</a>
+
+    </Section>
+
     <Section class="section section-ow">
         <div class="container container-center">
             <h1>Emoji Meaning</h1>
@@ -52,6 +111,34 @@
             <a href="https://github.com/TusharBhandirge/expense_record" class="link link-secondary">Check out the source code</a>
 
     </Section>
+
+    <Section class="section section-ow">
+        <div class="container container-center">
+            <h1>Transalte To Yoda</h1>
+            <p>
+                A simple vanilaJs app which translate english into yoda's langauge.
+            </p>
+            <a href="https://translate-to-yoda.netlify.app/" class="link link-primary">Check out the web-app</a>
+            <a href="https://github.com/TusharBhandirge/TranslateToYoda.git" class="link link-secondary">Check out the source code</a>
+
+        </div>
+
+
+    <Section class="section">
+        <div class="container container-center">
+            <h1>Translate To Banana</h1>
+            <p>A simple vanilaJs app which translate english into banana i.e. Minion's langauge.
+            </p>
+            <a href="https://translate-to-minion-banana.netlify.app/" class="link link-primary">Check out the web-app</a>
+            <a href="https://github.com/TusharBhandirge/SpeakMinion" class="link link-secondary">Check out the source code</a>
+
+        </div>
+
+    </Section>  
+
+
+     
+
 
     
 </body>
