--- a/projects.html
+++ b/projects.html
@@ -122,7 +122,7 @@
             <a href="https://github.com/TusharBhandirge/TranslateToYoda.git" class="link link-secondary">Check out the source code</a>
 
         </div>
-
+    </Section>
 
     <Section class="section">
         <div class="container container-center">
