Added CLI projects

--- a/projects.html
+++ b/projects.html
@@ -136,7 +136,27 @@
 
     </Section>  
 
+    <Section class="section section-ow">
+        <div class="container container-center">
+            <h1>CLI Football Quiz</h1>
+            <p>
+               A CLI App of a fun football quiz. Play and get to know how well do you know football.
+            </p>
+            <a href="https://replit.com/@tusharbhandirge/Football-Quiz?v=1" class="link link-primary">Check out the repl</a>
 
+        </div>
+    </Section>
+
+    <Section class="section">
+        <div class="container container-center">
+            <h1>CLI :How well do you know me</h1>
+            <p>
+               A CLI App of a quiz about me. Play and get to know how well do you know me.
+            </p>
+            <a href="https://replit.com/@tusharbhandirge/How-well-do-you-know-me?v=1" class="link link-primary">Check out the repl</a>
+
+        </div>
+    </Section>
      
 
 
