Feat : added travel guide project

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
     </header>
 
 
-    <Section class="section">
+    <Section class="section section-ow">
         <div class="container container-center">
             <h1>Stock Return</h1>
             <p>
@@ -41,7 +41,7 @@
     </Section>
 
 
-    <Section class="section section-ow">
+    <Section class="section">
         <div class="container container-center">
             <h1>Palindrome BirthDates</h1>
             <p>Check if your birthdates are palindorme or not.
@@ -53,7 +53,7 @@
 
     </Section>
 
-    <Section class="section">
+    <Section class="section section-ow">
         <div class="container container-center">
             <h1>Fun with Triangles</h1>
             <p>
@@ -64,7 +64,7 @@
 
     </Section>
 
-    <Section class="section section-ow">
+    <Section class="section">
         <div class="container container-center">
             <h1>Lucky BirthDates</h1>
             <p>Find out if your birth date is lucky or not!
@@ -76,7 +76,7 @@
 
     </Section>
 
-    <Section class="section">
+    <Section class="section section-ow">
         <div class="container container-center">
             <h1>Cash Register</h1>
             <p>
@@ -84,6 +84,18 @@
             </p>
             <a href="https://my-cash-register.netlify.app/" class="link link-primary">Check out the web-app</a>
             <a href="https://github.com/TusharBhandirge/Cash-Register.git" class="link link-secondary">Check out the source code</a>
+
+    </Section>
+
+    <Section class="section">
+        <div class="container container-center">
+            <h1>Travel Guide</h1>
+            <p>A simple web app made with react which will tell you top three foods, Beaches and Hillstations in Maharashtra.
+            </p>
+            <a href="https://best-in-maharashtra.netlify.app/" class="link link-primary">Check out the web-app</a>
+            <a href="https://github.com/TusharBhandirge/travel-guide.git" class="link link-secondary">Check out the source code</a>
+
+        </div>
 
     </Section>
 
