--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="container container-center">
             <h1>Blogs</h1>
             <p>I also like to showcase my journey of web developent and some events of my life by writing blow </p>
+            <a href="./blog.html" class="link link-primary">Goto Blogs</a>
         </div>
 
     </Section>
