feat: added 2nd blog

--- a/blog.html
+++ b/blog.html
@@ -41,12 +41,12 @@
 
     <Section class="section">
         <div class="container container-center">
-            <h1>Building my portfolio</h1>
+            <h1>Basic tags of HTML</h1>
             <p>
-               This blog showcase my journey of building my portfolio and completing mark 15 of <neog class="camp"></neog>
-               click below to check out the whole blog
+               This blog tell about basic tags in HTML.
+               click below to check out the blog
             </p>
-            <a href="/components/BlogPages/BuildingMyPortfolio.html" class="link link-primary">checkout blog</a>
+            <a href="/components/BlogPages/basic-tags-of-html.html" class="link link-primary">checkout blog</a>
         </div>
     </Section>
 
