fix : changes repl for CLI apps

--- a/projects.html
+++ b/projects.html
@@ -154,8 +154,8 @@
             <p>
                A CLI App of a fun football quiz. Play and get to know how well do you know football.
             </p>
-            <a href="https://replit.com/@tusharbhandirge/Football-Quiz?v=1" class="link link-primary">Check out the repl</a>
-
+            <a href="https://replit.com/@tusharbhandirge/football-quiz#quiz.js" class="link link-primary">Check out the repl</a>
+            <a href="https://github.com/TusharBhandirge/football-quiz.git" class="link link-secondary">Check out the source code</a>
         </div>
     </Section>
 
@@ -165,7 +165,8 @@
             <p>
                A CLI App of a quiz about me. Play and get to know how well do you know me.
             </p>
-            <a href="https://replit.com/@tusharbhandirge/How-well-do-you-know-me?v=1" class="link link-primary">Check out the repl</a>
+            <a href="https://replit.com/@tusharbhandirge/Quiz-about-me#quiz.js" class="link link-primary">Check out the repl</a>
+            <a href="https://github.com/TusharBhandirge/Quiz-about-me.git" class="link link-secondary">Check out the source code</a>
 
         </div>
     </Section>
