feat : added footer in all files

--- a/blog.html
+++ b/blog.html
@@ -50,5 +50,25 @@
         </div>
     </Section>
 
+    <footer class="footer">
+        <div class="footer-heading ">You can contact me on below links</div>
+        <ul class="list-nobullets">
+            <li class=" list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/tushar-bhandirge-300249118/">
+                    <img class="icon-image" src="./Images/icons8-linkedin-30.png" />
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/TusharBhandirge?s=09">
+                    <img class="icon-image" src="./Images/icons8-twitter-30.png" />
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://github.com/TusharBhandirge?tab=repositories">
+                    <img class="icon-image" src="./Images/icons8-github-30.png"/>
+                </a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
