feat : added portfolio building blog

--- a/blog.html
+++ b/blog.html
@@ -41,12 +41,12 @@
 
     <Section class="section">
         <div class="container container-center">
-            <h1>Basic tags of HTML</h1>
+            <h1>Building my postfolio</h1>
             <p>
-               This blog tell about basic tags in HTML.
-               click below to check out the blog
+               This blog speaks about how I made my portfolio.
+               click below to check out the whole blog
             </p>
-            <a href="/components/BlogPages/basic-tags-of-html.html" class="link link-primary">checkout blog</a>
+            <a href="/components/BlogPages/BuildingMyPortfolio.html" class="link link-primary">checkout blog</a>
         </div>
     </Section>
 
