fix : fixed typo of postFolio to portfolio

--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
 
     <Section class="section">
         <div class="container container-center">
-            <h1>Building my postfolio</h1>
+            <h1>Building my portfolio</h1>
             <p>
                This blog speaks about how I made my portfolio.
                click below to check out the whole blog
